less/home-page.less
// Home Content
html {
  font-size: 62.5%;
}

.home {
  width: 1000px;
  @media @phone {
    width: 500px;
  }

  .intro {

    h2 {
      padding: 15px;
    }

    p {
      padding:0 15px;
    }
  
  }

  //----------MAIN HEADER-----------------//

        .main-header {
          .img-rounded-corners();   //*** mixin used for rounded corners
          width: 90%;
          margin-top: .25%;
          margin-left: 4%;

          @media @phone {
            width: 100%;
            margin-left: 0px;
          }
        }

  //----------END MAIN HEADER------------//

  .lift-off {
    width: 90%;
    margin-left: 4%;
    font-size: 3.4rem;
  }

.intro {
  width: 100%;
}

.page-title {
  font-size: 3.4rem;
  .bg-color-mixin();  //*****mixin used////
  width: 100%;
  padding-left: 33%;
  padding-top: 2%;

  @media @phone {
    .bg-color-mixin();  //*****mixin used ///////
    padding-left: 0%;
    text-align: center;
    width: 100%;
    
  }
}


  .space-images {
    display: flex;
    flex-wrap: wrap;
    width: 90%;
    margin-left: 4%;

    img {
      width: 28%;
      margin: 20px 2.5%;
      height: 100%;
      .img-rounded-corners();   //*** mixin used for rounded corners
    } 

    .blast {  
      @media @phone {  //*** set blast image to 100% on mobile
        width: 100%;
      }
    }

    .sky, .launch {  // ***** remove sky and launch images on mobile
      @media @phone {
        display: none;
      }

    }

  } // end space images

  .visit-planets {
    padding: 15px;

    h3 {
      margin-top: 11px;
    }

    p {
      margin-top: 13px;
    }
  }

  .visit {
    width: 90%;
    margin-left: 4%;
    font-size: 3.4rem;
  }

  .walk {
    margin-top: 60px;
    border-top: 1px solid @main-border-color;
    padding: 50px 60px;
    display: flex;
    justify-content: center;

      @media @phone {
        flex-direction: column-reverse;  // *** set walk section to column for image and text on mobile
        padding: 3% 3%;  // *** lessen padding on mobile
        margin-top: 3%;
      }

    .walk-text {
      width: 50%;

      @media @phone {  // *** set walk text to fuller width on mobile
        width: 96%;
        padding-top: 2%;
        padding-left: 3%;
      }

      h3 {
        margin-bottom: 10px;
      }

      p {
        margin-bottom: 26px;
      }

      .btn {  //*****other styling in parametric mixin in mixins.les*****//
        font-size: 1.5rem;
        padding-left: 8px;
        padding-bottom: 5px;
        border: none;

        @media @phone {
          width: 100%;
          text-align: center;
          height: 60px;
          font-size: 2.4rem;
          padding-top: 4%;
          padding-left: 0%;
        }
      }

    
      
  .btn:hover {
    background-color: white;  //***** button hover to reverse text and background color
    color: black;
  }
    }  

    .walk-img {
      width: 96%;
      margin-left: 4%;

      @media @phone {
        width: 96%;
        padding-right: 3%;
        padding-left: 0%;
      }
      
      img {
        width: 100%;
        height: auto;
        .img-rounded-corners();  //*** mixin used for rounded corners
      }
    }
  }

  footer {
    width: 80%;
    margin-left: 9%;
    .bg-color-mixin();

    @media @phone {
      width: 99.9%;
      margin-left: 0%;
    }
  }

}// home

